Update De Apis de Imagenes
